Bug 136222 - Linear and Axial gradients looks ugly with Skia
Summary: Linear and Axial gradients looks ugly with Skia
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: graphics stack (show other bugs)
Version:
(earliest affected)
7.1.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.1.0 target:7.0.3
Keywords: bibisectRequest, regression
Depends on:
Blocks: Skia
  Show dependency treegraph
 
Reported: 2020-08-28 11:37 UTC by Roman Kuznetsov
Modified: 2020-09-21 14:25 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Gradients example (13.72 KB, application/vnd.oasis.opendocument.graphics)
2020-08-28 11:38 UTC, Roman Kuznetsov
Details
Screenshot with problem (119.83 KB, image/png)
2020-08-28 11:39 UTC, Roman Kuznetsov
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Roman Kuznetsov 2020-08-28 11:37:07 UTC
Description:
Linear and Axis gradients looks ugly with Skia

Steps to Reproduce:
1. Make sure you use Skia render
2. Open file from attach
3. Look at shapes

Actual Results:
Linear and Axis gradients looks ugly with Skia

Expected Results:
Linear and Axis gradients looks good with Skia


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.1.0.0.alpha0+ (x64)
Build ID: a486fd929d4b3e915f928ef495b6cb2b96d74a3a
CPU threads: 4; OS: Windows 10.0 Build 18362; UI render: Skia/Raster; VCL: win
Locale: ru-RU (ru_RU); UI: en-US
Calc: threaded
Comment 1 Roman Kuznetsov 2020-08-28 11:38:36 UTC
Created attachment 164798 [details]
Gradients example
Comment 2 Roman Kuznetsov 2020-08-28 11:39:12 UTC
Created attachment 164799 [details]
Screenshot with problem
Comment 3 Telesto 2020-08-28 13:22:06 UTC
Confirm behavior
Version: 7.1.0.0.alpha0+ (x64)
Build ID: 6640d7f405d2970ba2825a9455926cc803284d01
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: default; VCL: win
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL

Ugliness matter of taste ;-)
Comment 4 Telesto 2020-08-28 21:08:08 UTC
Fine with
Version: 7.0.0.0.beta1+ (x64)
Build ID: 2891e91a513520d68ea2b8c59c14335861a15253
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL
Comment 5 Telesto 2020-08-29 15:21:50 UTC
Still OK with
Version: 7.1.0.0.alpha0+ (x64)
Build ID: c10ea0e903ee2aba126087fc81702233b3a509cf
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: nl-NL (nl_NL); UI: nl-NL
Calc: CL
Comment 6 Commit Notification 2020-09-21 12:33:50 UTC
Luboš Luňák committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/859596233146590f7ebac1f05bbb83ce5ea8aac4

do not try to merge polygons if they do not share a point (tdf#136222)

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2020-09-21 14:25:21 UTC
Luboš Luňák committed a patch related to this issue.
It has been pushed to "libreoffice-7-0":

https://git.libreoffice.org/core/commit/db650bc2f262424edd5b4f3edb24fb37bc2ce12c

do not try to merge polygons if they do not share a point (tdf#136222)

It will be available in 7.0.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.