do not try to merge polygons if they do not share a point (tdf#136222)

If two polygons do not share a point, then they do not share an edge,
so they cannot be adjacent polygons. As a side-effect this avoids
the problem with tdf#136222, as it turns out
basegfx::utils::mergeToSinglePolyPolygon() is broken with polygons
that are almost but not quite adjacent.

Change-Id: Ibf290cc886d7c337fd04c925b551b2e7773a6b70