vcl/skia/gdiimpl.cxx
@@ -40,6 +40,7 @@
 #include <basegfx/polygon/b2dpolygontools.hxx>
 #include <basegfx/polygon/b2dpolypolygontools.hxx>
 #include <basegfx/polygon/b2dpolypolygoncutter.hxx>
+#include <o3tl/sorted_vector.hxx>
 
 namespace
 {
@@ -849,6 +850,19 @@ void SkiaSalGraphicsImpl::performDrawPolyPolygon(const basegfx::B2DPolyPolygon& 
 #endif
 }
 
+namespace
+{
+struct LessThan
+{
+    bool operator()(const basegfx::B2DPoint& point1, const basegfx::B2DPoint& point2) const
+    {
+        if (basegfx::fTools::equal(point1.getX(), point2.getX()))
+            return basegfx::fTools::less(point1.getY(), point2.getY());
+        return basegfx::fTools::less(point1.getX(), point2.getX());
+    }
+};
+} // namespace
+
 bool SkiaSalGraphicsImpl::delayDrawPolyPolygon(const basegfx::B2DPolyPolygon& aPolyPolygon,
                                                double fTransparency)
 {
@@ -877,6 +891,9 @@ bool SkiaSalGraphicsImpl::delayDrawPolyPolygon(const basegfx::B2DPolyPolygon& aP
     // so they do not need joining.
     if (aPolyPolygon.count() != 1)
         return false;
+    // If the polygon is not closed, it doesn't mark an area to be filled.
+    if (!aPolyPolygon.isClosed())
+        return false;
     // If a polygon does not contain a straight line, i.e. it's all curves, then do not merge.
     // First of all that's even more expensive, and second it's very unlikely that it's a polygon
     // split into more polygons.
@@ -888,6 +905,28 @@ bool SkiaSalGraphicsImpl::delayDrawPolyPolygon(const basegfx::B2DPolyPolygon& aP
             || !mLastPolyPolygonInfo.bounds.overlaps(aPolyPolygon.getB2DRange())))
     {
         checkPendingDrawing(); // Cannot be parts of the same larger polygon, draw the last and reset.
+    }
+    if (!mLastPolyPolygonInfo.polygons.empty())
+    {
+        assert(aPolyPolygon.count() == 1);
+        assert(mLastPolyPolygonInfo.polygons.back().count() == 1);
+        // Check if the new and the previous polygon share at least one point. If not, then they
+        // cannot be adjacent polygons, so there's no point in trying to merge them.
+        bool sharePoint = false;
+        const basegfx::B2DPolygon& poly1 = aPolyPolygon.getB2DPolygon(0);
+        const basegfx::B2DPolygon& poly2 = mLastPolyPolygonInfo.polygons.back().getB2DPolygon(0);
+        o3tl::sorted_vector<basegfx::B2DPoint, LessThan> poly1Points; // for O(n log n)
+        poly1Points.reserve(poly1.count());
+        for (sal_uInt32 i = 0; i < poly1.count(); ++i)
+            poly1Points.insert(poly1.getB2DPoint(i));
+        for (sal_uInt32 i = 0; i < poly2.count(); ++i)
+            if (poly1Points.find(poly2.getB2DPoint(i)) != poly1Points.end())
+            {
+                sharePoint = true;
+                break;
+            }
+        if (!sharePoint)
+            checkPendingDrawing(); // Draw the previous one and reset.
     }
     // Collect the polygons that can be possibly merged. Do the merging only once at the end,
     // because it's not a cheap operation.
@@ -908,6 +947,8 @@ void SkiaSalGraphicsImpl::checkPendingDrawing()
         if (polygons.size() == 1)
             performDrawPolyPolygon(polygons.front(), transparency, true);
         else
+            // TODO: tdf#136222 shows that basegfx::utils::mergeToSinglePolyPolygon() is unreliable
+            // in corner cases, possibly either a bug or rounding errors somewhere.
             performDrawPolyPolygon(basegfx::utils::mergeToSinglePolyPolygon(polygons), transparency,
                                    true);
     }
